# GtkMiniModem

./: README.md  meson.build
data/: meson.build  org.gnome.sharan.gtkminimodem.appdata.xml.in  org.gnome.sharan.gtkminimodem.desktop.in  org.gnome.sharan.gtkminimodem.gschema.xml
po/: POTFILES  meson.build
src/: gtkminimodem-window.c  gtkminimodem-window.h  gtkminimodem-window.ui  gtkminimodem.gresource.xml  main.c  meson.build
